@@ -3,6 +3,7 @@ Changes in 3.1.6
 * FIX: Spotlight: fix for long running queries
 * UPD: afpd: distribute SIGHUP from parent afpd to children and force
        reload shares
+* FIX: netatalk: refresh Zeroconf registration when receiving SIGHUP
 
 Changes in 3.1.5
 ================
